--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "firebase": "^11.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^5.2.0"
   }
 }
-
